can stop running

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="desc">2023 Transformation & Digital new year luck draw</div>
             <div class="button">
-                <button onclick="start(this)">
+                <button onclick="start(this)" id="runDraw">
                     Run Lucky draw
                 </button>
             </div>
@@ -47,9 +47,10 @@
     </div>
 </body>
 <script>
-    async function hover() {
+    async function pull() {
         const img = document.getElementsByClassName('record')[0]
         if (img) {
+            isStarting = true
             img.classList.remove('record')
             img.classList.add('record2')
 
@@ -64,19 +65,19 @@
 
     }
 
-    async function out() {
-        const img = document.getElementsByClassName('record2')[0]
-        img.classList.remove('pull')
-        img.classList.add('push')
+    // async function out() {
+    //     const img = document.getElementsByClassName('record2')[0]
+    //     img.classList.remove('pull')
+    //     img.classList.add('push')
 
-        img.classList.remove('record2')
-        img.classList.add('record')
-        return new Promise((resolve) => {
-            setTimeout(() => {
-                resolve(img)
-            }, 1000)
-        })
-    }
+    //     img.classList.remove('record2')
+    //     img.classList.add('record')
+    //     return new Promise((resolve) => {
+    //         setTimeout(() => {
+    //             resolve(img)
+    //         }, 1000)
+    //     })
+    // }
 
     function addItem(nameList, name, ignoreClass) {
         const item = document.createElement('div')
@@ -96,23 +97,27 @@
         })
     }
 
-    async function showLuckyName() {
+    function clearAllJumpingName() {
+        nameList.innerHTML = ''
+    }
+
+    async function showLuckyRecord() {
         const div = document.createElement('div')
 
         const mainContainer = document.getElementsByClassName('main-container')[0]
-        // const left = `calc(50% - ${name.length * 10 / 2}px)`
-        // div.style.left = left
+        const luckyNames = document.getElementsByClassName('lucky-name')
+        const luckyName = luckyNames[luckyNames.length - 1]
+
+        setTimeout(() => {
+            if (luckyName) {
+                mainContainer.removeChild(luckyName)
+            }
+        }, 1000)
+
         div.classList.add('lucky-name')
         div.innerHTML = '<img src="./images/round.png">'
-        // <div class="name" style="left: ${left}">${name}</div>`
         mainContainer.append(div)
-
-        return new Promise(resolve => {
-            setTimeout(() => {
-                // mainContainer.removeChild(div)
-                resolve(div)
-            }, 1000)
-        })
+        return Promise.resolve(div)
     }
 
     async function showPlayer() {
@@ -121,8 +126,11 @@
         div.classList.add('player')
         div.innerHTML = '<img src="./images/player.png" srcset="">'
         mainContainer.append(div)
+        return new Promise((resolve) => {
+            resolve(div)
+        }, 1000)
     }
-    
+
     async function sleep(time) {
         return new Promise(resolve => {
             setTimeout(() => {
@@ -135,56 +143,113 @@
     const nameList = document.getElementsByClassName('name-list')[0]
     let totalCount = 0
 
+    let isRunning = false
+    let isStopping = false
+    let isStarting = false
+    Object.defineProperty(window, 'isRunning', {
+        set(value) {
+            isRunning = value
+            if (value) {
+                document.getElementById('runDraw').innerText = 'Stop Running draw'
+            } else {
+                document.getElementById('runDraw').innerText = 'Start Lucky draw'
+            }
+        },
+        get() {
+            return isRunning
+        }
+    })
+
+    function addLuckyNameToRecord(luckyName) {
+        const luckyNameContainers = document.getElementsByClassName('lucky-name')
+        const luckyNameContainer = document.getElementsByClassName('lucky-name')[luckyNameContainers.length - 1]
+        const luckyNameDiv = document.createElement('div')
+        luckyNameDiv.classList.add('name')
+        const left = `calc(50% - ${luckyName.length * 12 / 2}px)`
+        luckyNameDiv.innerText = luckyName
+        luckyNameDiv.style.left = left
+        luckyNameContainer.append(luckyNameDiv)
+    }
+
+    function addLuckyNameToLuckyNameList(luckyName) {
+        return new Promise((resolve=> {
+            setTimeout(() => {
+                const member = document.createElement('div')
+                totalCount++
+                member.innerText = `${totalCount}. ${luckyName}`
+                document.getElementsByClassName('result')[0].append(member)
+                resolve(member)
+            }, 4000)
+        }))
+    }
+
+    async function randomAndSetName() {
+        showLuckyRecord()
+
+        const length = names.length
+        let rnd = -1
+        for (let index = 0; index < length; index++) {
+            if (!window.isRunning) {
+                isStopping = true
+                rnd = index
+                break
+            }
+            const name = names[index].name
+            await getOne(nameList, name)
+
+            if (index == length - 1) {
+                clearAllJumpingName()
+                index = -1
+            }
+        }
+
+        const luckyName = names[rnd].name
+        names.splice(rnd, 1)
+        await getOne(nameList, luckyName, rnd)
+        addItem(nameList, luckyName)
+
+        setTimeout(async () => {
+            addLuckyNameToRecord(luckyName)
+
+            await addLuckyNameToLuckyNameList(luckyName)
+            isStopping = false
+        }, 500)
+    }
+
     async function start(obj) {
-        obj.setAttribute('disabled', '')
-        const sourceRecord = await hover()
-        if(sourceRecord) {
-            console.log('The first time to show running record')
-            await showLuckyName()
-            showPlayer()
-            await sleep(500)
+        const sourceRecord = await pull()
+        if (sourceRecord) {
+            await showLuckyRecord()
+            await showPlayer()
+            isStarting = false
+        }
+
+        if(isStopping || isStarting) {
+            return
+        }
+
+        window.isRunning = !window.isRunning
+        if (!window.isRunning) {
+            return
         }
 
         const length = names.length
-        nameList.innerHTML = ''
         if (length < 1) {
             return
         }
         try {
-            const rnd = Math.floor(Math.random() * names.length)
-            const luckyName = names[rnd].name
-            showLuckyName()
+            randomAndSetName()
 
-            let index = 0
-            for (let index = 0; index < length; index++) {
-                if (rnd === index) {
-                    continue
+            for (; ;) {
+                showLuckyRecord()
+                await sleep(1200)
+                if (!window.isRunning) {
+                    return
                 }
-                const name = names[index].name
-                await getOne(nameList, name)
             }
-            names.splice(rnd, 1)
-            await getOne(nameList, luckyName, rnd)
-            addItem(nameList, luckyName)
-
-            setTimeout(() => {
-                const luckyNameContainers = document.getElementsByClassName('lucky-name')
-                const luckyNameContainer = document.getElementsByClassName('lucky-name')[luckyNameContainers.length - 1]
-                const luckyNameDiv = document.createElement('div')
-                luckyNameDiv.classList.add('name')
-                const left = `calc(50% - ${luckyName.length * 12 / 2}px)`
-                luckyNameDiv.innerText = luckyName
-                luckyNameDiv.style.left = left
-                luckyNameContainer.append(luckyNameDiv)
-
-                const member = document.createElement('div')
-                totalCount ++
-                member.innerText = `${totalCount}. ${luckyName}`
-                document.getElementsByClassName('result')[0].append(member)
-                obj.removeAttribute('disabled')
-            }, 500)
         } catch {
-            obj.removeAttribute('disabled')
+            isStopping = false
+            window.isRunning = false
         }
     }
 </script>
