--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,11 @@
     }
     
     window.onload = function () { document.getElementById('runDraw').focus() }
+
+    setInterval(() => {
+        document.querySelector('button').focus()
+    }, 2000)
+
 </script>
 
 </html>
