--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" charset="UTF-8">
     <title>Awesome Lucky Draw Version 2.0</title>
     <link rel="stylesheet" href="style.css">
+    <script src="names.js"></script>
     <script src="index.js"></script>
 </head>
 
