--- a/server/static/static/matrix.html
+++ b/server/static/static/matrix.html
@@ -1,7 +1,7 @@
     <html>
 
     <head>
-        <title>MSS Lucky Draw 2024</title>
+        <title>HTML5 Canvas Matrix Effect</title>
         <style>
             body {
                 margin: 0;
@@ -120,7 +120,7 @@
             }
 
             .production img {
-                opacity: .8;
+                opacity: .62;
                 max-height: 70vh;
                 /* width: 100%; */
                 border-radius: 10px;
@@ -168,7 +168,7 @@
                     <div style="flex: 2;">
                         <!-- <img src="./productions/changbaxiaojudang.jpg" id="img-production" class="prize" /> -->
                         <img src="./productions/jingdong500yuan.png" id="img-production" class="prize" alt="京东500元购物卡" />
-                        <div id="draw-name" style="opacity: .7; font-weight: bold; color: #fff; margin-left: 15px;">京东500元购物卡</div>
+                        <div style="opacity: .7; font-weight: bold; color: #fff; margin-left: 15px;">京东500元购物卡</div>
                     </div>
                 </div>
             </div>
