--- a/mss/src/matrix.html
+++ b/mss/src/matrix.html
@@ -21,7 +21,7 @@
                 height: 100vh;
                 /* padding-top: 25vh; */
                 margin: auto auto;
-                /* overflow: auto; */
+                overflow: hidden;
 
                 border: 1px solid gray;
             }
