--- a/mss/server/static/index.html
+++ b/mss/server/static/index.html
@@ -36,6 +36,7 @@
             cursor: pointer;
             background-color: transparent;
             margin-right: 5px;
+            margin-bottom: 5px;
             border: 1px solid;
             padding: 5px;
         }
