--- a/mss/server/static/desk.html
+++ b/mss/server/static/desk.html
@@ -162,7 +162,7 @@
                 <img src="./small_cloud.png" />
             </div>
 
-            <div class="production">
+            <div class="production" style="display: none;">
                 <div class="draw-result" style="display: flex;">
                     <div class="winners" id="winners" style="flex: 1;"></div>
                     <div style="flex: 2;">
