--- a/mss/server/static/index.html
+++ b/mss/server/static/index.html
@@ -200,31 +200,65 @@
 
         window.drawTypes = {}
         async function getAllDrawTypes() {
-            const response = await fetch('/allDrawTypes')
-            const data = await response.json()
-            window.drawTypes = data
-            const drawTypesData = document.getElementById('drawTypes')
-            let startWith = ''
-            Object.keys(window.drawTypes).forEach(key => {
-                if(startWith !== key[0]) {
-                    drawTypesData.appendChild(document.createElement('br'))
-                    startWith = key[0]
-                    const span = document.createElement('span')
-                    span.innerHTML = `${startWith.toUpperCase()}: `
-                    drawTypesData.appendChild(span)
-                }
 
-                const dt = window.drawTypes[key]
-                const button = document.createElement('button')
-                button.classList.add('btn-primary')
-                button.onclick = () => {
-                    setDrawType(key)
-                    document.getElementById('drawType').innerHTML = `${dt.name}(${key})`
-                    document.getElementById('drawCount').innerHTML = dt.count
-                }
-                button.textContent = dt.name
-                drawTypesData.appendChild(button)
+            const res = await fetch('./getTurnsAndGifts')
+            const data = await res.json()
+            const drawTypesData = document.getElementById('drawTypes')
+            window.turns = data
+            const prizes = ['sandengjiang', 'erdengjiang', 'yidengjiang']
+            window.turns.forEach(turn => {
+                // to creat a new div for every turn and append to dataTypesData element
+                const div = document.createElement('div')
+                div.classList.add('turn')
+                div.innerHTML = `<h2>${turn.name}</h2>`
+                drawTypesData.appendChild(div)
+
+                prizes.forEach(prize => {
+                    // to create a new div for every prize and append to turn div element
+                    const prizeDiv = document.createElement('div')
+                    prizeDiv.innerHTML = `<h3>${prize}</h3>`
+                    prizeDiv.classList.add('prize')
+                    div.appendChild(prizeDiv)
+
+                    turn[prize].forEach(gift => {
+                        const button = document.createElement('button')
+                        button.classList.add('btn-primary')
+                        button.onclick = () => {
+                            setDrawType(gift.key)
+                            document.getElementById('drawType').innerHTML = `${gift.name}`
+                            document.getElementById('drawCount').innerHTML = gift.count
+                        }
+                        button.textContent = gift.name
+                        prizeDiv.appendChild(button)
+                    })
+                })
             })
+
+            // const response = await fetch('/allDrawTypes')
+            // const data = await response.json()
+            // window.drawTypes = data
+            // const drawTypesData = document.getElementById('drawTypes')
+            // let startWith = ''
+            // Object.keys(window.drawTypes).forEach(key => {
+            //     if (startWith !== key[0]) {
+            //         drawTypesData.appendChild(document.createElement('br'))
+            //         startWith = key[0]
+            //         const span = document.createElement('span')
+            //         span.innerHTML = `${startWith.toUpperCase()}: `
+            //         drawTypesData.appendChild(span)
+            //     }
+
+            //     const dt = window.drawTypes[key]
+            //     const button = document.createElement('button')
+            //     button.classList.add('btn-primary')
+            //     button.onclick = () => {
+            //         setDrawType(key)
+            //         document.getElementById('drawType').innerHTML = `${dt.name}(${key})`
+            //         document.getElementById('drawCount').innerHTML = dt.count
+            //     }
+            //     button.textContent = dt.name
+            //     drawTypesData.appendChild(button)
+            // })
 
             document.querySelector('.btn-primary').click()
         }
